--- a/APIRestTraining.API2/appsettings.json
+++ b/APIRestTraining.API2/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SqlConnection": "data source=DESKTOP-TE5QR25;initial catalog=Colegio;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
